--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\ApplyCardController.cs" />
      <Compile Include="Assets\CameraFocusController.cs" />
      <Compile Include="Assets\DeployStageOnce.cs" />
      <Compile Include="Assets\EscavadorModController.cs" />
