--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,14 +51,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\ApplyCardController.cs" />
-     <Compile Include="Assets\CameraFocusController.cs" />
-     <Compile Include="Assets\DeployStageOnce.cs" />
-     <Compile Include="Assets\EscavadorModController.cs" />
-     <Compile Include="Assets\GameController.cs" />
-     <Compile Include="Assets\ModController.cs" />
-     <Compile Include="Assets\StartingPoint.cs" />
-     <Compile Include="Assets\ToyController.cs" />
+     <Compile Include="Assets\Scripts\ApplyCardController.cs" />
+     <Compile Include="Assets\Scripts\CameraFocusController.cs" />
+     <Compile Include="Assets\Scripts\DeployStageOnce.cs" />
+     <Compile Include="Assets\Scripts\EscavadorModController.cs" />
+     <Compile Include="Assets\Scripts\GameController.cs" />
+     <Compile Include="Assets\Scripts\ModController.cs" />
+     <Compile Include="Assets\Scripts\StartingPoint.cs" />
+     <Compile Include="Assets\Scripts\ToyController.cs" />
      <Compile Include="Assets\Vuforia\Scripts\DefaultInitializationErrorHandler.cs" />
      <Compile Include="Assets\Vuforia\Scripts\DefaultTrackableEventHandler.cs" />
      <None Include="Assets\Vuforia\Shaders\ColoredLines.shader" />
