--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Scripts\DeployStageOnce.cs" />
      <Compile Include="Assets\Scripts\DirectionChanger.cs" />
      <Compile Include="Assets\Scripts\DirectionChangerTrigger.cs" />
+     <Compile Include="Assets\Scripts\EndPointController.cs" />
      <Compile Include="Assets\Scripts\EscavadorModController.cs" />
      <Compile Include="Assets\Scripts\FasteningTrigger.cs" />
      <Compile Include="Assets\Scripts\GameController.cs" />
