--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\ApplyCardController.cs" />
+     <Compile Include="Assets\Scripts\ButtonsAction.cs" />
      <Compile Include="Assets\Scripts\CameraFocusController.cs" />
      <Compile Include="Assets\Scripts\DeployStageOnce.cs" />
      <Compile Include="Assets\Scripts\DirectionChanger.cs" />
