--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
      <Compile Include="Assets\Scripts\RandomColor.cs" />
      <Compile Include="Assets\Scripts\SceneSelector.cs" />
      <Compile Include="Assets\Scripts\SlowingTrigger.cs" />
+     <Compile Include="Assets\Scripts\Soundtrack.cs" />
      <Compile Include="Assets\Scripts\SpinningCube.cs" />
      <Compile Include="Assets\Scripts\StartingPoint.cs" />
      <Compile Include="Assets\Scripts\ToyController.cs" />
